# Klauncher

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  klauncher.desktop  klauncher.spec
src/: CMakeLists.txt  config.h.in  klauncher.cpp  klauncher.h  main.cpp
src/core/: Dir.cpp  Dir.h  File.cpp  File.h  Process.cpp  Process.h  additional.cpp  additional.h  appprocess.cpp  appprocess.h  klauncherDeclarativePlugin.cpp  klauncherDeclarativePlugin.h  klaunchermanager.cpp  klaunchermanager.h  processmanager.cpp  processmanager.h
src/qml/: AboutPage.qml  AddAppDialog.qml  AppCard.qml  AppSettingsPage.qml  ApplicationPage.qml  BaseApp.qml  DrawerPage.qml  Main.qml  MainPage.qml  SettingsPage.qml
